# fewdigits

./: FewDigits.cabal
Data/: Multinomial.hs
Data/Real/: CReal.hs  Complete.hs  DReal.hs  Dyadic.hs  Integration.hs  Picard.hs
